--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pip==19.2.3
-numpy==1.17.2
-pandas==0.25.1
-scipy==1.3.1
-scikit-learn==0.21.3
-matplotlib==3.1.1
-seaborn==0.9.0
+pip
+numpy
+pandas
+scipy
+scikit-learn
+matplotlib
+seaborn
